# TauriStarterKit

./: .gitignore  AGENTS.md  README.md  eslint.config.js  package-lock.json  package.json
docs/architecture/: 30-Loading-Indicators.md
docs/plans/: 01-FeatureUpdatePlan.md
scripts/: create-app.mjs  preview-template.mjs  validate-template.mjs
templates/macos-tauri-react/: .gitignore  AGENTS.md  README.md  eslint.config.js  package-lock.json  package.json  vite.config.ts
templates/macos-tauri-react/.github/workflows/: ci.yml
templates/macos-tauri-react/docs/architecture/: 10-Main-Interface.md  20-ThemeCustomisation.md  30-Activity-Indicators.md  30-Loading-Indicators.md  31-Toast-Notifications.md  32-Debugging.md  40-Data-Tables.md  41-Forms.md  (+2 more)
templates/macos-tauri-react/scripts/: build-release.mjs  generate-icons.sh  install-local.sh  uninstall-local.sh  upgrade-local.sh
templates/macos-tauri-react/src/: main.tsx  styles.css
templates/macos-tauri-react/src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
templates/macos-tauri-react/src-tauri/capabilities/: default.json
templates/macos-tauri-react/src-tauri/icons/: icon.icns
templates/macos-tauri-react/src-tauri/src/: lib.rs  main.rs
templates/macos-tauri-react/src-tauri/src/commands/: diagnostics.rs  example.rs  mod.rs
templates/macos-tauri-react/src-tauri/src/models/: mod.rs
templates/macos-tauri-react/src-tauri/src/system/: command_runner.rs  mod.rs  paths.rs  window_sizing.rs
templates/macos-tauri-react/src-tauri/src/system/file_opening/: editor.rs  mod.rs  open.rs
(+75 files in other folders)
